# password_manager

./: app.py  app2.py  cript.py  key.key  pyproject.toml  tabela.csv  teste.ipynb
application/: authentication.py  pwd_manager.py  token.py
tables/: passwords.csv  passwords.py  users.csv  users.py
tests/: app2.py  cript.py
