[tool.poetry]
name = "password-manager"
version = "0.1.0"
description = ""
authors = ["rafalsilva05 <rafalsilva5002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
pandas = "^2.2.3"
cryptography = "^43.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
